--- a/Final-Report/future.tex
+++ b/Final-Report/future.tex
@@ -7,11 +7,13 @@ The scan simulation feature was received well on the whole however there is a lo
 It does however raise the question of exactly how much realism is needed to effectively test a reconstruction algorithm? Highly realistic MRI simulation has been done before and tools, such as MRiLab\cite{mrilab}, allow the user to experiment with different scan sequences, coils and more. However, how far along this path we need to go to test reconstruction algorithm remains an area where more research is needed.
 
 \section{Reconstruction}
-My time spent with researchers indicated that overall they are willing to spend time labelling slice stacks, but only if they really need to, and only the minimum number required. Four landmarks is sufficient to define a rigid transformation (translation and rotation only) and this may prove sufficient for some scans, however the more deformable the organ, the more landmarks are required. The position of the landmarks is also important, having four  along the same axis is of no use, and how likely the landmark is to be obscured is also a consideration.
+The time spent with researchers indicated that overall they are willing to spend time labelling slice stacks, but only if they really need to, and only the minimum number required. Four landmarks is sufficient to define a rigid transformation (translation and rotation only) and this may prove sufficient for some scans, however the more deformable the organ, the more landmarks are required. The position of the landmarks is also important, having four  along the same axis is of no use, and how likely the landmark is to be obscured is also a consideration.
 
-There are many efficiency savings that can be investigated to improve this step. One interesting approach would be to introduce the concept of iterated reconstruction: an initial reconstruction is first performed and then, based on the uncertainty that results the user can be prompted to provide landmarks in uncertain regions. This procedure can then be repeated, with only small parts of the volume requiring reconstruction at each step, until the uncertainty is at an acceptable level.
+There are many efficiency savings that can be investigated to improve this step. One interesting approach would be to introduce the concept of iterated reconstruction: an initial reconstruction is first performed and then, based on the uncertainty, the user can be prompted to provide landmarks in problem regions. This procedure can then be repeated, with only small parts of the volume requiring reconstruction at each step, until the uncertainty is at an acceptable level.
 
-If the algorithm could also output the current best guess for each landmark this would also be beneficial. Moving the landmarking process from a completely manual "find all these landmarks" to a supervised "here are some landmarks - are they correct" approach will not just save time, but also be less tedious.
+If the algorithm could also output the current best guess for each landmark this would also be beneficial. Moving the landmarking process from a completely manual "find all these landmarks" to a supervised "here are some landmarks - are they correct?" approach would not just save time, but also be less tedious.
+
+There is also room for the development of some tools to help with the manual inspection of slice stacks. Researchers still require a way to manually inspect the slice stacks to check their quality, either to establish why a reconstruction failed, or as a preliminary check. One feature that could be implemented to help with this is the ability to view stacks side by side and scroll through them simultaneously. This could be taken a step further by trying to automate the detection of artefacts in an MRI scan to semi-automate this manual process.
 
 \section{Visualization}
 The visualizations implemented provide a way of communicating the uncertainty in a manner far easier than looking at the raw data.
